slack commands/oc/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: slack-youtube-cmd
    name: slack-youtube-cmd
  name: slack-youtube-cmd
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: slack-youtube-cmd
    deploymentconfig: slack-youtube-cmd
  type: ClusterIP
