slack commands/oc/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: slack-youtube-cmd
    name: slack-youtube-cmd
  name: slack-youtube-cmd
spec:
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: slack-youtube-cmd
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
    routerName: router
    wildcardPolicy: None
